--- a/ch7_WeatherApp/android/app/src/main/AndroidManifest.xml
+++ b/ch7_WeatherApp/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
   package="com.weatherapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_ LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
       android:name=".MainApplication"
